--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: tcrwp-app-db
-          property: postgres://tcrwp_app_db_user:jdVHJdUCsOf964ZFhdi8yLdmcenJgvsW@dpg-cgm9r28feoo5804u0r2g-a/tcrwp_app_db
+          property: connectionString
       # pick the region closest to your database
       # For example, us-west-2 for the Oregon region
       - key: AWS_REGION
